Fix queue item meta info overflowing horizontally

--- a/static/style.css
+++ b/static/style.css
@@ -731,6 +731,8 @@ textarea:focus, input[type="text"]:focus, input[type="number"]:focus, select:foc
     display: flex;
     gap: 10px;
     color: var(--text-dim);
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .badge {
